Fix select-search z-index issue

--- a/src/app/shared/form-controls/select-search/select-search.component.scss
+++ b/src/app/shared/form-controls/select-search/select-search.component.scss
@@ -8,7 +8,7 @@
   .select-search-options-container {
     position: relative;
     display: none;
-    z-index: 2;
+    z-index: 3;
 
     &:hover {
       display: block;
